--- a/src/sass/custom/_loading.custom.scss
+++ b/src/sass/custom/_loading.custom.scss
@@ -5,7 +5,6 @@
   width: 100%;
   top:0px;
   left:0px;
-  z-index:10000;
 
   #loader-bg{
     position: absolute;
